--- a/events.html
+++ b/events.html
@@ -4,12 +4,8 @@
 <head>
     <title>KnowHow'19 &mdash;Try Now To know how.</title>
     <link rel="icon" type="image/ico" href="images/logo.png" />
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
@@ -22,6 +18,24 @@
     <link rel="stylesheet" href="css/swiper.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300i,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        @media screen and (max-width: 768px) {
+            #menu-toggle:checked+.nav-menu {
+                display: block;
+            }
+        }
+
+        .hero-body>.container {
+            padding: 0 10px;
+        }
+
+    </style>
 </head>
 
 <body>
@@ -43,7 +57,7 @@
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                                <li class="active"><a href="index.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li class="has-children">
                                     <a href="events.html">Events</a>
                                     <ul class="dropdown">
@@ -57,6 +71,7 @@
                                 </li>
                                 <li><a href="Results.html">Results</a></li>
                                 <li><a href="about.html">About US</a></li>
+                                <li><a href="story.html">Stories</a></li>
                                 <li class="has-children">
                                     <a href="to.html">Contact</a>
                                     <ul class="dropdown">
@@ -72,10 +87,10 @@
                         <div class="d-none d-xl-inline-block">
                             <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                                 <li>
-                                    <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+                                    <a href="https://www.facebook.com/bvmcollegetpc" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                                    <a href="https://www.instagram.com/bvmtpc/" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
                                 </li>
                             </ul>
                         </div>
@@ -84,81 +99,84 @@
                 </div>
             </div>
         </header>
-         <div class="site-section" data-aos="fade">
-            <div class="container-fluid">
-                <div class="row justify-content-center">
-                    <div class="col-md-7">
-                        <div class="row mb-5">
-                            <div class="col-12 ">
-                                <h2 class="site-section-heading text-center">Events</h2>
-                            </div>
+        <div class="block">
+            <div class="tile is-ancestor">
+                <div class="tile is-vertical is-8">
+                    <div class="tile">
+                        <div class="tile is-parent is-vertical">
+                            <article class="tile is-child notification is-primary">
+                                <a href="segacite.html" style="color:black"><p class="text-black h2 mb-0" >Segacite</p></a>
+                                <p class="subtitle" style="color:black"><b>“Because the cover of the book matters!”</b></p>
+								<p style="color:black">This event consists of 3 rounds which will check participant’s wit, creativity  and convincing abilities.</p>
+                            </article>
+                            <article class="tile is-child notification is-warning">
+                                <a href="accentus.html" style="color:black"><p class="text-black h2 mb-0">Accentus</p></a>
+                                <p class="subtitle" style="color:black"><b>“Why so serious?”</b></p>
+								<p style="color:black">This event consists of 3 rounds in which the participants will be judged on the basis of promptness, concentration & reflexes.</p></a>
+                            </article>
+                        </div>
+                        <div class="tile is-parent">
+                            <article class="tile is-child notification is-info">
+                                <a href="msmr.html" style="color:black"><p class="text-black h2 mb-0">Ms/Mr KnowHow</p></a>
+                                <p class="subtitle" style="color:black"><b>“Win the occasion”</b></p>
+                                <figure class="image is-4by3">
+                                    <img src="images/Story/w%20(1).jpg">
+                                </figure>
+                            </article>
                         </div>
                     </div>
-                </div>
-                <div class="site-section" data-aos="fade">
-                    <div class="container-fluid">
-                        <div class="row justify-content-center">
-                            <div class="col-md-7">
-                                <div class="row mb-5">
-                                    <div class="col-12 ">
-                                        <h5 class="site-section-heading text-center">Enter The Competition</h5>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
-                                            <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
-                                            <h3 class="text-black h4">Ahl ar-Ra'y</h3>
-                                            <p>“People of Opinion”.A compromise where nobody is looser</p>
-                                            <p><strong class="font-weight-bold text-primary"> 20 ₹</strong></p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
-                                            <span class="icon flaticon-picture display-3 text-primary mb-4 d-block"></span>
-                                            <h3 class="text-black h4">Vyaktitvam</h3>
-                                            <p>"Eveything you need to learn is within"</p>
-                                            <p><strong class="font-weight-bold text-primary">30 ₹</strong></p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
-                                            <span class="icon flaticon-sheep display-3 text-primary mb-4 d-block"></span>
-                                            <h3 class="text-black h4">Accentus</h3>
-                                            <p>“Why so serious?”</p>
-                                            <p><strong class="font-weight-bold text-primary">20 ₹</strong></p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
-                                            <span class="icon flaticon-frame display-3 text-primary mb-4 d-block"></span>
-                                            <h3 class="text-black h4">Segacite</h3>
-                                            <p>“Because the cover of the book matters!”</p>
-                                            <p><strong class="font-weight-bold text-primary">20 Rs.</strong></p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
-                                            <span class="icon flaticon-eiffel-tower display-3 text-primary mb-4 d-block"></span>
-                                            <h3 class="text-black h4">Cribado</h3>
-                                            <p>“Welcome to the Corporate World”</p>
-                                            <p><strong class="font-weight-bold text-primary">35 Rs.</strong></p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
-                                        <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
-                                            <span class="icon flaticon-video-play display-3 text-primary mb-4 d-block"></span>
-                                            <h3 class="text-black h4">Ms. KnowHow and Mr. Knowhow</h3>
-                                            <p>“Are you a class apart ?”</p>
-                                            <p><strong class="font-weight-bold text-primary">15 Rs.</strong></p>
-                                        </div>
-                                    </div>
-                                </div>
+                    <div class="tile is-parent">
+                        <article class="tile is-child notification is-danger">
+                            <a href="cribado.html" style="color:black"><p class="text-black h2 mb-0">Cribado</p></a>
+                            <p class="subtitle" style="color:black"><b>“Welcome to the Corporate World”</b></p>
+                            <div class="content">
+                                <p style="color:black">This event will help participants to crack the campus placement procedure.</p>
                             </div>
-                        </div>
+                        </article>
                     </div>
                 </div>
-                </div>
+                <div class="tile">
+                        <div class="tile is-parent is-vertical">
+                            <article class="tile is-child notification is-primary">
+                                <a href="vyakti.html" style="color:black"><p class="text-black h2 mb-0">Vyaktitvam</p></a>
+                                <p class="subtitle" style="color:black"><b>“Everything you need to know is within”</b></p>
+								<p style="color:black">Participant’s personality will be judged on the basis of psychological questions. The ability of participants to move an abstract idea to a particular direction will be analysed which will be helpful to identify their corporate suitability.</p>
+                            </article>
+                            <article class="tile is-child notification is-warning">
+                                <a href="ahlarry.html" style="color:black"><p class="text-black h2 mb-0">Ahl ar-Ra’y</p></a>
+                                <p class="subtitle" style="color:black"><b>“People of Opinion”</b></p>
+								<p style="color:black">Participants will be judged on the basis of knowledge of the current affairs, world as well as regional politics. The ability of participants to represent themselves as a delegate and make responsible decisions in diplomatic situations.</p>
+                            </article>
+                        </div>
+                    </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+       <div class="footer py-4">
+            <div class="container-fluid text-center">
+                <p>
+					 <a >
+						<span class="icon">
+							<i class="fa fa-github"></i>
+						</span>
+					</a>
+                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+                    <script>
+                        document.write(new Date().getFullYear());
+
+                    </script> Developed by Assassin007 with <i class="icon-heart-o" area-hidden="true"></i> from <a href="https://colorlib.com" target="_blank">Colorlib Libraries</a>
+                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                </p>
+            </div>
+        </div>
+
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
