--- a/segacite.html
+++ b/segacite.html
@@ -58,7 +58,7 @@
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                                <li class="active"><a href="index.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li class="has-children">
                                     <a href="events.html">Events</a>
                                     <ul class="dropdown">
@@ -67,12 +67,12 @@
                                         <li><a href="accentus.html">Accentus</a></li>
                                         <li><a href="segacite.html">Segacite</a></li>
                                         <li><a href="cribado.html">Cribado</a></li>
+										<li><a href="msmr.html">Ms/Mr KnowHow</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="Results.html">Results</a></li>
                                 <li><a href="about.html">About US</a></li>
                                 <li><a href="story.html">Stories</a></li>
-								<li><a href="msmr.html">Ms/Mr KnowHow</a></li>
                                 <li class="has-children">
                                     <a href="to.html">Contact</a>
                                     <ul class="dropdown">
@@ -112,38 +112,38 @@
                         </div>
                     </div>
                 </div>
-<div class="site-section" data-aos="fade">
+<div  data-aos="fade">
                     <div class="container-fluid">
                         <div class="row justify-content-center">
                             <div class="col-md-7">
                                 <div class="row mb-5">
                                     <div class="col-12 ">
-                                        <h5 class="site-section-heading text-center">“Because the cover of the book matters!”</h5>
+                                        <h2 class="text-black h2 mb-0" style="text-align:center">“Welcome to the Corporate World”</h2>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
                                         <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
                                             <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
-                                            <h3 class="text-black h4">Event1</h3>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-                                            <p><strong class="font-weight-bold text-primary">20 Rs.</strong></p>
+                                            <h3 class="text-black h4">Lets get Witty!</h3>
+                                            <p>The candidates will be asked to write down catchy headlines, tweets, captions / one-liners for the given paragraph/photograph.</p>
+                                            <p><strong class="font-weight-bold text-primary">1<sup>st</sup>  Round</strong></p>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
                                         <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
                                             <span class="icon flaticon-picture display-3 text-primary mb-4 d-block"></span>
-                                            <h3 class="text-black h4">Event2</h3>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-                                            <p><strong class="font-weight-bold text-primary">30 Rs.</strong></p>
+                                            <h3 class="text-black h4">Polyglot</h3>
+                                            <p>Let's not reveal Everything exciting here.Somethings better be come across as surprise.</p>
+                                            <p><strong class="font-weight-bold text-primary">2<sup>nd</sup> Round</strong></p>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
                                         <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
                                             <span class="icon flaticon-sheep display-3 text-primary mb-4 d-block"></span>
-                                            <h3 class="text-black h4">Event3</h3>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-                                            <p><strong class="font-weight-bold text-primary">40 Rs.</strong></p>
+                                            <h3 class="text-black h4">Devil’s Advocate</h3>
+                                            <p>Personal Interview based on the given personality.</p>
+                                            <p><strong class="font-weight-bold text-primary">3<sup>rd</sup> Round</strong></p>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
@@ -156,9 +156,14 @@
                     </div>
                 </div>
 
-        <div class="footer py-4">
+<div class="footer py-4">
             <div class="container-fluid text-center">
                 <p>
+					 <a >
+						<span class="icon">
+							<i class="fa fa-github"></i>
+						</span>
+					</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                     <script>
