--- a/vyakti.html
+++ b/vyakti.html
@@ -57,7 +57,7 @@
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                                <li class="active"><a href="index.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li class="has-children">
                                     <a href="events.html">Events</a>
                                     <ul class="dropdown">
@@ -100,7 +100,7 @@
             </div>
         </header>
         <!-- GRID SYSTEM -->
-                  <div class="site-section" data-aos="fade">
+                  <div  class="site-section" data-aos="fade">
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-md-7">
@@ -111,39 +111,41 @@
                         </div>
                     </div>
                 </div>
-                <div class="site-section" data-aos="fade">
+                <div  data-aos="fade">
                     <div class="container-fluid">
                         <div class="row justify-content-center">
                             <div class="col-md-7">
                                 <div class="row mb-5">
                                     <div class="col-12 ">
-                                        <h5 class="site-section-heading text-center">"Eveything you need to learn is within"</h5>
+                                        <h2 class="text-black h2 mb-0" style="text-align:center">"Everything you need to know is within"</h2>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
                                         <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
                                             <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
-                                            <h3 class="text-black h4">Event1</h3>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-                                            <p><strong class="font-weight-bold text-primary">20 Rs.</strong></p>
+                                            <h3 class="text-black h4">Discuss the Perceived</h3>
+                                            <p>There will be a Group Discussion based on abstract topics. Participants ability to think & analyze will be judged.</p>
+                                            <p><strong class="font-weight-bold text-primary">1<sup>st</sup>  Round</strong></p>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
                                         <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
                                             <span class="icon flaticon-picture display-3 text-primary mb-4 d-block"></span>
-                                            <h3 class="text-black h4">Event2</h3>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-                                            <p><strong class="font-weight-bold text-primary">30 Rs.</strong></p>
+                                            <h3 class="text-black h4">Surprise Round</h3>
+                                            <p>What's in the name ?Only until everything actually is in the name.</p>
+                                            <p><strong class="font-weight-bold text-primary">2<sup>nd</sup> Round</strong></p>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
                                         <div class="h-100 p-4 p-lg-5 bg-light site-block-feature-7">
                                             <span class="icon flaticon-sheep display-3 text-primary mb-4 d-block"></span>
-                                            <h3 class="text-black h4">Event3</h3>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
-                                            <p><strong class="font-weight-bold text-primary">40 Rs.</strong></p>
+                                            <h3 class="text-black h4">Meet the Psychologist</h3>
+                                            <p>Participants will have a face to face conversation with a psychologist who will analyse their psychology & self-knowledge.</p>
+                                            <p><strong class="font-weight-bold text-primary">3<sup>rd</sup> Round</strong></p>
                                         </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
                                     </div>
                                 </div>
                             </div>
@@ -153,9 +155,14 @@
                     </div>
                 </div>
 
-        <div class="footer py-4">
+<div class="footer py-4">
             <div class="container-fluid text-center">
                 <p>
+					 <a >
+						<span class="icon">
+							<i class="fa fa-github"></i>
+						</span>
+					</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                     <script>
