--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                                <li class="active"><a href="index.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li class="has-children">
                                     <a href="events.html">Events</a>
                                     <ul class="dropdown">
